--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
             &copy; 2025 Audio Streaming Service
         </footer>
     </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.8.1/socket.io.js" integrity="sha512-8BHxHDLsOHx+flIrQ0DrZcea7MkHqRU5GbTHmbdzMRnAaoCIkZ97PqZcXJkKZckMMhqfoeaJE+DNUVuyoQsO3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
         const startBtn = document.getElementById('startBtn');
